Stop CSRF failures when posting a comment on a feature suggestion

--- a/molly/apps/feature_vote/templates/feature_vote/feature_detail.html
+++ b/molly/apps/feature_vote/templates/feature_vote/feature_detail.html
@@ -41,6 +41,7 @@
   <h2>Add a comment</h2>
   </div>
   <form method="post" action="{% comment_form_target %}">
+    {% csrf_token %}
     {{ form.content_type }}
     {{ form.object_pk }}
     {{ form.timestamp }}
