Add CSRF tokens to forms. Fixes issue #17.

--- a/molly/apps/feature_vote/templates/feature_vote/index.html
+++ b/molly/apps/feature_vote/templates/feature_vote/index.html
@@ -47,6 +47,7 @@
   <h2>Suggest a feature</h2>
   </div>
   <form method="post" action=".">
+    {% csrf_token %}
     <input type="hidden" name="csrf" value="{{ csrf }}"/>
     <dl>
       <dt>{{ form.user_name.label_tag }}:</dt>
