--- a/molly/apps/feedback/templates/feedback/index.html
+++ b/molly/apps/feedback/templates/feedback/index.html
@@ -23,6 +23,7 @@
 </style>
 
 <form method="post" action=".">
+  {% csrf_token %}
 <input type="hidden" name="referer" value="{{ referer }}"/>
 
 <div class="section">
