--- a/molly/apps/feature_vote/templates/feature_vote/vote.html
+++ b/molly/apps/feature_vote/templates/feature_vote/vote.html
@@ -1,5 +1,6 @@
 <div class="vote-box" style="float:right">
   <form method="post" action="{% url feature_vote:index %}">
+    {% csrf_token %}
     <input type="hidden" name="csrf" value="{{ csrf }}"/>
     <input type="hidden" name="id" value="{{ feature.id }}"/>
     <input type="hidden" name="return_url" value="{{ full_path }}"/>
