--- a/molly/templates/admin/auth/user/change_password.html
+++ b/molly/templates/admin/auth/user/change_password.html
@@ -16,6 +16,7 @@
 {% endif %}{% endblock %}
 {% block content %}<div id="content-main">
 <form action="{{ form_url }}" method="post" id="{{ opts.module_name }}_form">{% block form_top %}{% endblock %}
+{% csrf_token %}
 <div>
 {% if is_popup %}<input type="hidden" name="_popup" value="1" />{% endif %}
 {% if form.errors %}
