--- a/molly/templates/admin/change_list.html
+++ b/molly/templates/admin/change_list.html
@@ -69,6 +69,7 @@
       {% endblock %}
       
       <form action="" method="post"{% if cl.formset.is_multipart %} enctype="multipart/form-data"{% endif %}>
+        {% csrf_token %}
       {% if cl.formset %}
         {{ cl.formset.management_form }}
       {% endif %}
