--- a/molly/templates/admin/template_validator.html
+++ b/molly/templates/admin/template_validator.html
@@ -5,6 +5,7 @@
 <div id="content-main">
 
 <form action="" method="post">
+    {% csrf_token %}
 
 {% if form.errors %}
 <p class="errornote">Your template had {{ form.errors|length }} error{{ form.errors|pluralize }}:</p>
